# sdk-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
caged/: __init__.py  client.py  errors.py  mcp.py  py.typed  stream.py  terminal.py  types.py
