[project]
name = "caged-sdk"
version = "0.2.0"
description = "Official Python SDK for the Caged AI Agent Sandbox Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Bytangle Ltd", email = "hello@caged.dev" }]
keywords = ["caged", "sandbox", "ai", "agent", "firecracker", "microvm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0", "websockets>=12.0"]

[project.urls]
Homepage = "https://caged.dev"
Documentation = "https://caged.dev/docs/sdks/python"
Repository = "https://github.com/caged-dev/sdk-python"
Issues = "https://github.com/caged-dev/sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caged"]
